--- a/controlefinanceiro/pom.xml
+++ b/controlefinanceiro/pom.xml
@@ -21,5 +21,22 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+	    <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
+	<dependency>
+	    <groupId>com.sun.faces</groupId>
+	    <artifactId>jsf-api</artifactId>
+	    <version>2.2.18</version>
+	</dependency>
+    
+    
+	    <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-impl -->
+	<dependency>
+	    <groupId>com.sun.faces</groupId>
+	    <artifactId>jsf-impl</artifactId>
+	    <version>2.2.18</version>
+	</dependency>
+    
+    
   </dependencies>
 </project>
