--- a/controlefinanceiro/pom.xml
+++ b/controlefinanceiro/pom.xml
@@ -22,11 +22,36 @@
       <scope>test</scope>
     </dependency>
     
+    <dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.4.2.Final</version>
+    <scope>compile</scope>
+</dependency>
+    
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-entitymanager</artifactId>
+    <version>5.4.2.Final</version>
+    <scope>compile</scope>
+</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+<dependency>
+    <groupId>postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.1-901-1.jdbc4</version>
+    <scope>compile</scope>
+</dependency>
+    
+    
 	    <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
 	<dependency>
 	    <groupId>com.sun.faces</groupId>
 	    <artifactId>jsf-api</artifactId>
 	    <version>2.2.18</version>
+	    <scope>compile</scope>
 	</dependency>
     
     
@@ -35,8 +60,15 @@
 	    <groupId>com.sun.faces</groupId>
 	    <artifactId>jsf-impl</artifactId>
 	    <version>2.2.18</version>
-	</dependency>
+	    <scope>compile</scope>
+	</dependency>  
     
+    <dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>5.4.2.Final</version>
+    <scope>compile</scope>
+</dependency>
     
   </dependencies>
 </project>
